--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,44 +1,16 @@
-#login-header-text {
-  margin-left: 0.2rem;
-  width: 100%;
+ion-header {
+    ion-avatar {
+        margin: 0.1rem auto;
+        height: 2.7rem;
+        width: 2.7rem;
+        img {
+            box-shadow: 0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
+        }
+    }
 }
-#login-container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  padding: 2rem;
+ion-toolbar {
+    // --background: #eb7b7b;
 }
-#logo {
-  width: 40vw;
-  aspect-ratio: 1 / 1;
-  margin-bottom: 2rem;
-}
-.vertical-center {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-}
-.horizontal-center {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-.login-inputs {
-  width: 100%;
-}
-.login-buttons {
-  display: flex;
-  align-items: flex-end;
-  flex-direction: column;
-  width: 100%;
-}
-.item {
-  --background: none;
-  width: 100%;
-  margin-bottom: 0.5rem;
+ion-button > ion-icon {
+    // color: white;
 }
