Add login logic

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-avatar>
+    <ion-avatar slot="start">
       <img src="assets/icon/action-logo.png" alt="ACTION" />
     </ion-avatar>
     <ion-buttons slot="end">
