--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,6 @@
 ion-header {
     ion-avatar {
-        margin: 0.1rem auto;
+        margin-left: calc((100vw - 3.3rem) / 2);
         height: 2.7rem;
         width: 2.7rem;
         img {
@@ -12,5 +12,5 @@ ion-toolbar {
     // --background: #eb7b7b;
 }
 ion-button > ion-icon {
-    // color: white;
+    color: white;
 }
