--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,13 +9,12 @@
         <div class="login-inputs">
           <form [formGroup]="loginForm" (ngSubmit)="submitLogin()" novalidate>
             <ion-item fill="outline" class="item">
-              <ion-label position="stacked">Phone Number</ion-label>
+              <ion-label position="stacked">Email</ion-label>
               <ion-input
-                formControlName="phoneNumber"
-                type="tel"
-                placeholder="Enter phone number"
+                formControlName="email"
+                type="email"
+                placeholder="Enter G-Suite email"
               ></ion-input>
-              <ion-note slot="error">Invalid phone number</ion-note>
             </ion-item>
             <ion-item fill="outline" class="item">
               <ion-label position="stacked">Password</ion-label>
@@ -27,7 +26,9 @@
               ></ion-input>
             </ion-item>
             <div class="login-buttons">
-              <ion-button type="submit">Login</ion-button>
+              <ion-button [disabled]="isButtonDisabled" type="submit"
+                >Login</ion-button
+              >
             </div>
           </form>
         </div>
