--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-avatar slot="start">
       <img src="assets/icon/action-logo.png" alt="ACTION" />
     </ion-avatar>
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" id="open-settings">
       <ion-button>
         <ion-icon slot="icon-only" name="settings"></ion-icon>
       </ion-button>
@@ -12,11 +12,34 @@
 </ion-header>
 
 <ion-content>
+  <ion-modal #modal trigger="open-settings">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Settings</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="modal.dismiss()">Close</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-item
+            button
+            detail="false"
+            (click)="modal.dismiss();onLogout(modal)"
+          >
+            <ion-label>Logout</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="reports">
         <ion-icon name="compass"></ion-icon>
-        <ion-label>View Reports</ion-label>
+        <ion-label>View</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="feed">
@@ -25,9 +48,17 @@
       </ion-tab-button>
 
       <ion-tab-button tab="create">
+        <!-- <ion-tab-button (click)="showFab()"> -->
         <ion-icon name="document-text"></ion-icon>
-        <ion-label>New Report</ion-label>
+        <ion-label>Create</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
+  <!-- <div class="fab-content" (click)="hideFab()">
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="fab-button">
+      <ion-fab-button (click)="createClick()">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </div> -->
 </ion-content>
