--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -14,3 +14,14 @@ ion-toolbar {
 ion-button > ion-icon {
     // color: white;
 }
+
+.fab-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(0, 0, 0, 0.75);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    animation: all 1s;
+}
