Change splash and logo, add buildings service

--- a/src/app/home/reports/reports.page.html
+++ b/src/app/home/reports/reports.page.html
@@ -11,7 +11,7 @@
         <ion-select
           interface="action-sheet"
           [(ngModel)]="building"
-          (ionChange)="buildingChange(e)"
+          (ionChange)="buildingChange()"
           value="All"
           placeholder="All"
         >
