Add report detail page

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,7 @@
 ion-header {
     ion-avatar {
-        margin-left: calc((100vw - 3.3rem) / 2);
+        margin-left: 1rem;
+        // margin-left: calc((100vw - 3.3rem) / 2);
         height: 2.7rem;
         width: 2.7rem;
         img {
