--- a/src/app/home/detail/detail.page.html
+++ b/src/app/home/detail/detail.page.html
@@ -3,14 +3,19 @@
     <ion-avatar slot="start">
       <img src="assets/icon/action-logo.png" alt="ACTION" />
     </ion-avatar>
-    <ion-buttons slot="end" id="go-back">
-      <ion-button>
-        <ion-icon slot="icon-only" name="return-up-back-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons slot="start" id="go-back">
+      <ion-button (click)="goBack()">
+        <ion-icon slot="icon-only" name="arrow-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
