--- a/src/app/home/detail/detail.page.html
+++ b/src/app/home/detail/detail.page.html
@@ -1,14 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-avatar slot="start">
-      <img src="assets/icon/action-logo.png" alt="ACTION" />
-    </ion-avatar>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
 
 <ion-footer>
   <ion-toolbar>
