--- a/src/app/home/settings/settings.page.html
+++ b/src/app/home/settings/settings.page.html
@@ -1,9 +1,29 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>settings</ion-title>
+    <ion-title>Settings</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item button detail="false" (click)="handleLogout()">
+      <ion-label>Security</ion-label>
+    </ion-item>
+    <ion-item button detail="false" (click)="handleLogout()">
+      <ion-label>About</ion-label>
+    </ion-item>
+    <ion-item button detail="false" (click)="handleLogout()">
+      <ion-label>Log out</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons slot="start" id="go-back">
+      <ion-button (click)="goBack()">
+        <ion-icon slot="icon-only" name="arrow-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
