--- a/src/app/home/detail/detail.page.scss
+++ b/src/app/home/detail/detail.page.scss
@@ -1,11 +1,133 @@
-ion-header {
-    ion-avatar {
-        margin-left: 1rem;
-        // margin-left: calc((100vw - 3.3rem) / 2);
-        height: 2.7rem;
-        width: 2.7rem;
-        img {
-            box-shadow: 0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
+.document-title {
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    color: white;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin: 0.75rem 0.5rem;
+    background-color: #130000;
+    text-align: center;
+}
+.section-container {
+    margin: 0.5rem;
+    padding: 1rem;
+    padding-bottom: 0;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 0.5rem;
+    border-color: #b6b6b69a;
+    margin-bottom: 1rem;
+    ion-skeleton-text {
+        margin-bottom: 1rem;
+    }
+}
+.section-title {
+    font-size: 1rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+}
+.section-item {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1rem;
+}
+.section-item-v {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+}
+.section-label {
+    margin-right: 0.5rem;
+}
+.section-data {
+    flex: 1;
+    font-weight: 400;
+    text-transform: capitalize;
+    border-bottom: 1px solid #b6b6b69a;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    span {
+        ion-radio {
+            margin-right: 0.5rem;
         }
+        margin-right: 0.5rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-items: auto;
+    }
+}
+.section-data-v {
+    flex: 1;
+    font-weight: 400;
+    text-transform: capitalize;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    span {
+        // margin-bottom: 0.5rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-items: auto;
+    }
+}
+.radio-group  {
+    margin-top: 0.5rem;
+    border-width: 0px;
+    justify-content: space-around;
+}
+.section-data-item {
+    width: 100%;
+    display: flex;
+    margin-top: 0.25rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-style: italic;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    background-color: #dfdfdf48;
+    span {
+        margin-left: 0.5rem;
+        width: 50%;
+    }
+    .radio-group {
+        margin-top: 0;
+        ion-radio {
+            margin-left: 1rem;
+        }
+    }
+}
+.section-data-item-v {
+    width: 100%;
+    display: flex;
+    margin-top: 0.25rem;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    font-style: italic;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    background-color: #dfdfdf48;
+    span {
+        margin-left: 0.5rem;
+        margin-bottom: 0.5rem;
+        width: 100%;
+    }
+    .radio-group {
+        margin-top: 0;
+        ion-radio {
+            margin-left: 1rem;
+        }
+    }
+    .section-data {
+        border-width: 0;
+        color: #505050;
     }
 }
