Match app theme

--- a/src/app/home/create/create.page.html
+++ b/src/app/home/create/create.page.html
@@ -1,9 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>create</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<div class="notice-message">You are creating a new report</div>
+<div class="document-title">Rapid Damage Assessment Form</div>
 <ion-content>
-
+  <ion-router-outlet [animated]="false"></ion-router-outlet>
 </ion-content>
