--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,19 +15,19 @@
   <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="reports">
-        <ion-icon name="compass"></ion-icon>
-        <ion-label>View</ion-label>
+        <ion-icon name="search-outline"></ion-icon>
+        <!-- <ion-label>View</ion-label> -->
       </ion-tab-button>
 
       <ion-tab-button tab="feed">
         <ion-icon name="home"></ion-icon>
-        <ion-label>Home</ion-label>
+        <!-- <ion-label>Home</ion-label> -->
       </ion-tab-button>
 
       <ion-tab-button tab="create">
         <!-- <ion-tab-button (click)="showFab()"> -->
-        <ion-icon name="document-text"></ion-icon>
-        <ion-label>Create</ion-label>
+        <ion-icon name="add-outline"></ion-icon>
+        <!-- <ion-label>Create</ion-label> -->
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
