--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,7 +1,8 @@
 #login-header-text {
   width: 100%;
-  margin-bottom: 0.1rem;
-  text-align: center;
+  margin-bottom: 1.5rem;
+  text-align: left;
+  margin-top: 0;
 }
 #login-container {
   display: flex;
@@ -11,9 +12,8 @@
   padding: 2rem;
 }
 #logo {
-  width: 40vw;
-  aspect-ratio: 1 / 1;
-  margin-bottom: 2rem;
+  width: 60vw;
+  margin-bottom: 15vh;
 }
 .vertical-center {
   display: flex;
@@ -21,6 +21,7 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
+  background-image: linear-gradient(#cf8719, #A10000, #A10000, #A10000);
 }
 .horizontal-center {
   display: flex;
@@ -40,9 +41,24 @@
 }
 .login-buttons > ion-button {
   width: 7rem;
+  --background: #9c1515;
 }
 .item {
   --background: none;
   width: 100%;
   margin-bottom: 0.75rem;
+}
+.login-box {
+  width: 100%;
+  padding: 1.5rem;
+  background-color: #ffe4e4;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 0.5rem 0.2rem rgba(0, 0, 0, 0.4);
+}
+
+// dark mode
+@media (prefers-color-scheme: dark) {
+  .login-box {
+    background-color: #202020;
+  }
 }
